--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,16 @@
         tools:replace="android:theme"
         tools:targetApi="31">
         <activity
+            android:name=".Buyers.SplashActivity"
+            android:theme="@style/SplashTheme"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".Admin.AdminCheckNewProductsActivity"
             android:exported="false" />
         <activity
@@ -81,12 +91,12 @@
             android:theme="@style/Base.Theme.AppCompat" />
         <activity
             android:name=".Buyers.MainActivity"
-            android:exported="true">
-            <intent-filter>
+            android:exported="false">
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
             <!-- optional (needed if default theme has no action bar) -->
         </activity>
     </application>
